fix: resolved issue of category items alignment

--- a/src/assets/styles/Menu.css
+++ b/src/assets/styles/Menu.css
@@ -61,6 +61,12 @@ header h1 {
     align-items: center;
 }
 
+.category-item-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .category-scroll-down-btn {
     bottom: 5rem;
     background-color: #ede9f3;
